# factorio-gym

./: .gitignore  AGENT.md  Dockerfile  E2E_DEMO.md  Makefile  SETUP.md  docker-compose.yml  pyproject.toml  pyrightconfig.json
config/: map-gen-settings.json  server-settings.json
config/server1/: rconpw  server-settings.json
config/server2/: rconpw  server-settings.json
config/server3/: rconpw  server-settings.json
docs/: vm-network-config.md  vm-setup-guide.md
instances/: port_config.env
mods/: mod-list.json
mods/agent-control/: control.lua  data.lua  info.json
scripts/: demo_summary.py  dev_server.py  e2e_demo.py  monitor.py  multi_instance_launcher.py  port_scanner.py  rcon_test.py  setup.sh  test_e2e_setup.py  test_rcon.py  test_rcon_old.py
specs/: 01-architecture-overview.md  02-factorio-integration.md  03-agent-behavior.md  03-rcon-commands.md  04-communication-protocol.md  05-implementation-roadmap.md  06-ai-training-environment.md  06-vm-approach-analysis.md  07-training-pipeline.md  08-environment-architecture.md  09-factorio-integration.md  10-high-performance-training.md
src/factorio_mcp/: __init__.py  rcon.py
test-data/factorio/: player-data.json
tests/: __init__.py  test_agent_integration.py  test_dev_server.py
